feat(#517): report coverage statistics
- Add coverage field (TEXT) to ChipReport entity
- ReportGeneratorService.generateReport() writes coverage JSON to dedicated field
- Coverage includes totalItems, validItems, noDataItems, failedItems, coverageRate
- ddl-auto=update will auto-add the column
- 3 unit tests